--- a/onlinetest/package.json
+++ b/onlinetest/package.json
@@ -1,45 +1,60 @@
 {
-  "name": "onlinetest",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.2",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "immutability-helper": "^3.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-material-ui-form-validator": "^2.0.10",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
-    "sass": "^1.25.0",
-    "uniqid": "^5.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "doc": "jsdoc -c jsdoc.json"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "jsdoc": "^3.6.3"
-  }
+	"name": "onlinetest",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.9.2",
+		"@material-ui/icons": "^4.9.1",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.4.0",
+		"@testing-library/user-event": "^7.2.1",
+		"immutability-helper": "^3.0.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-material-ui-form-validator": "^2.0.10",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.3.1",
+		"sass": "^1.25.0",
+		"uniqid": "^5.2.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"doc": "jsdoc -c jsdoc.json"
+	},
+	"jest": {
+		"snapshotSerializers": [
+			"enzyme-to-json/serializer"
+		],
+		"collectCoverageFrom": [
+			"src/**/*.jsx|*.js",
+			"!src/index.js"
+		],
+		"coverageReporters": [
+			"text"
+		]
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"enzyme-to-json": "^3.4.4",
+		"jsdoc": "^3.6.3"
+	}
 }
